services instead of public api and fix hopefully all asset urls

--- a/frontend/portfolio/index.html
+++ b/frontend/portfolio/index.html
@@ -78,7 +78,7 @@
   <div class="thumb">
     <img
       class="image"
-      src="https://unlim8ted.com/assets/images/products/games/TimeCatCover.png"
+      src="https://assets.unlim8ted.com/images/products/games/TimeCatCover.png"
       alt="TimeCat cover art"
       draggable="false"
       loading="lazy"
@@ -106,7 +106,7 @@
           <!-- CARD 2 -->
           <article class="portfolio-card" data-tags="films">
             <div class="thumb">
-              <img class="image" src="https://unlim8ted.com/assets/images/products/films/The Life of a Meatball.jpg"
+              <img class="image" src="https://assets.unlim8ted.com/images/products/films/The Life of a Meatball.jpg"
                 alt="The Life of a Meatball poster" draggable="false" loading="lazy" />
             </div>
             <div class="card-body">
@@ -127,7 +127,7 @@
           <!-- CARD 3 -->
           <article class="portfolio-card" data-tags="films">
             <div class="thumb">
-              <img class="image" src="https://unlim8ted.com/assets/images/products/films/TheGlitchCover.png"
+              <img class="image" src="https://assets.unlim8ted.com/images/products/films/TheGlitchCover.png"
                 alt="The Glitch cover art" draggable="false" loading="lazy" />
             </div>
             <div class="card-body">
