--- a/frontend/products/games/square-pixels/index.html
+++ b/frontend/products/games/square-pixels/index.html
@@ -193,27 +193,27 @@
       <h2 id="game-screenshots">Game Screenshots</h2>
       <div class="gallery">
         <figure class="media-card">
-          <img src="/assets/images/products/games/square-pixels-lighting.png" alt="Picture of lighting at night.">
+          <img src="https://assets.unlim8ted.com/images/products/games/square-pixels-lighting.png" alt="Picture of lighting at night.">
           <figcaption class="media-caption">Night lighting</figcaption>
         </figure>
 
         <figure class="media-card">
-          <img src="/assets/images/products/games/square-pixels-clip.jpg" alt="Landscape generation">
+          <img src="https://assets.unlim8ted.com/images/products/games/square-pixels-clip.jpg" alt="Landscape generation">
           <figcaption class="media-caption">Landscape generation</figcaption>
         </figure>
 
         <figure class="media-card">
-          <img src="/assets/images/products/games/square-pixels-inven.png" alt="Inventory">
+          <img src="https://assets.unlim8ted.com/images/products/games/square-pixels-inven.png" alt="Inventory">
           <figcaption class="media-caption">Inventory</figcaption>
         </figure>
 
         <figure class="media-card">
-          <video src="/assets/images/products/games/square-pixel-gen.mp4" autoplay loop muted playsinline></video>
+          <video src="https://assets.unlim8ted.com/images/products/games/square-pixel-gen.mp4" autoplay loop muted playsinline></video>
           <figcaption class="media-caption">Procedural generation (video)</figcaption>
         </figure>
 
         <figure class="media-card" style="grid-column: 1 / -1;">
-          <img src="/assets/images/products/software/img.png" alt="Character Creator">
+          <img src="https://assets.unlim8ted.com/images/products/software/img.png" alt="Character Creator">
           <figcaption class="media-caption">Character creator</figcaption>
         </figure>
       </div>
