--- a/frontend/products/music/index.html
+++ b/frontend/products/music/index.html
@@ -15,7 +15,7 @@
   <!-- MIDI parser -->
   <script src="https://cdn.jsdelivr.net/npm/@tonejs/midi"></script>
 
-  <link rel="stylesheet" href="./resources/csshttps://assets.unlim8ted.com/music.01.css">
+  <link rel="stylesheet" href="./resources/css/music.01.css">
 
 </head>
 
@@ -145,7 +145,7 @@
     </section>
   </div>
 
-  <script type="module" src="./resources/jshttps://assets.unlim8ted.com/music.01.js"></script>
+  <script type="module" src="./resources/js/music.01.js"></script>
 </body>
 
 </html>
