fix a ton of asset urls

--- a/frontend/products/games/index.html
+++ b/frontend/products/games/index.html
@@ -364,12 +364,12 @@
         </div>
         <div class="item-category" id="game-items">
             <a href="square-pixels" class="item-box" data-category="entertainment">
-                <img src="https://unlim8ted.com/assets/images/products/software/Screenshot 2023-09-21 181742(1).png"
+                <img src="https://assets.unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png"
                     alt="Square Pixels">
                 <h3>Square Pixels</h3>
             </a>
             <a href="TimeCat" class="item-box" data-category="puzzles">
-                <img src="https://unlim8ted.com/assets/images/products/software/timecat.webp"
+                <img src="https://assets.unlim8ted.com/images/products/software/timecat.webp"
                     alt="TimeCat">
                 <h3>TimeCat</h3>
             </a>
