--- a/frontend/products/films/index.html
+++ b/frontend/products/films/index.html
@@ -49,12 +49,12 @@
         </div>
         <div class="item-category" id="film-items">
             <a href="/products/product#The-Life-of-a-Meatball" class="item-box" data-category="short">
-                <img src="https://unlim8ted.com/assets/images\products\films\The Life of a Meatball.jpg"
+                <img src="https://assets.unlim8ted.com/images\products\films\The Life of a Meatball.jpg"
                     alt="The Life of a Meatball">
                 <h3>The Life of a Meatball</h3>
             </a>
             <a href="/products/product#theglitch" class="item-box" data-category="short">
-                <img src="https://unlim8ted.com/assets/images\products\films\TheGlitchCover.png" alt="The Glitch">
+                <img src="https://assets.unlim8ted.com/images\products\films\TheGlitchCover.png" alt="The Glitch">
                 <h3>The Glitch</h3>
             </a>
             <!--
