fix book product urls

--- a/frontend/products/books/index.html
+++ b/frontend/products/books/index.html
@@ -52,40 +52,40 @@
             </select>
         </div>
         <div class="item-category" id="book-items">
-            <a href="product#theglitchbook" class="item-box" data-category="sci-fi">
+            <a href="/products/product#theglitchbook" class="item-box" data-category="sci-fi">
                 <img src="https://unlim8ted.com/images/products/fiction-book.jpg">
                 <h3>The Glitch (book)</h3>
             </a>
-            <a href="product#theglitchscreenplay" class="item-box" data-category="sci-fi">
+            <a href="/products/product#theglitchscreenplay" class="item-box" data-category="sci-fi">
                 <img src="https://unlim8ted.com/images/products/fiction-book.jpg">
                 <h3>The Glitch (screen play)</h3>
             </a>
-            <a href="products#alien" class="item-box" data-category="sci-fi">
+            <a href="/products/product#alien" class="item-box" data-category="sci-fi">
                 <img src="https://unlim8ted.com/images/products/fiction-book.jpg">
                 <h3>Alien</h3>
             </a>
-            <a href="products" class="item-box" data-category="comedy">
+            <a href="/products/product#the-pool-world-war" class="item-box" data-category="comedy">
                 <img src="https://unlim8ted.com/images/products/fiction-book.jpg">
                 <h3>The pool world war.</h3>
             </a>
-            <a href="products" class="item-box" data-category="fantasy">
+            <a href="/products/product#the-crystals-conflict" class="item-box" data-category="fantasy">
                 <img src="https://unlim8ted.com/images/products/fiction-book.jpg">
                 <h3>The Crystal's Conflict</h3>
             </a>
-            <a href="products" class="item-box" data-category="fantasy">
+            <a href="/products/product#the-hidden-magic-school" class="item-box" data-category="fantasy">
                 <img src="https://unlim8ted.com/images/products/fiction-book.jpg">
                 <h3>The Hidden Magic School</h3>
             </a>
-            <a href="products" class="item-box" data-category="non-fiction">
+            <a href="/products/product#the-holes-in-space-and-time" class="item-box" data-category="non-fiction">
                 <img src="https://unlim8ted.com/images/products/non-fiction-book.jpg">
                 <h3>Holes in space and time.</h3>
             </a>
 
-            <a href="products" class="item-box" data-category="fiction">
+            <a href="/products/product#stranded" class="item-box" data-category="fiction">
                 <img src="https://unlim8ted.com/images/products/non-fiction-book.jpg">
                 <h3>Stranded</h3>
             </a>
-            <a href="products" class="item-box" data-category="fiction">
+            <a href="/products/product#ancient" class="item-box" data-category="fiction">
                 <img src="https://unlim8ted.com/images/products/non-fiction-book.jpg">
                 <h3>Ancient</h3>
             </a>
