fix an image in timecat page and update asset directory for puzzle square page

--- a/frontend/products/games/TimeCat/index.html
+++ b/frontend/products/games/TimeCat/index.html
@@ -2006,7 +2006,7 @@
       <div class="header-inner">
         <div class="brand">
           <div class="brand-logo">
-            <img src="logo/icon.jpg" alt="TimeCat icon" />
+            <img src="https://assets.unlim8ted.com/images/products/games/TimeCat/logo/icon.jpg" alt="TimeCat icon" />
           </div>
           <div class="brand-text">
             <div class="brand-title">TIMECAT</div>
