Fix image source and update spinner text

--- a/frontend/products/index.html
+++ b/frontend/products/index.html
@@ -643,7 +643,7 @@
 
                         <a href="images" class="card">
                             <div class="thumb"><img
-                                    src="https://assets.unlim8ted.com/images/Unlim8tedImages/space%20with%20foregroudn.jpg"
+                                    src="https://assets.unlim8ted.com/images/gallery/0122251938a(1)(1)(1)(1)(1)(1).jpg"
                                     alt="Images" /></div>
                             <div>
                                 <h2>Images</h2>
@@ -656,7 +656,7 @@
                 <aside class="spinnerCard">
                     <div class="spinnerHeader">
                         <strong>Not sure what to get?</strong>
-                        <span>Spin the wheel. We’ll pick a category from <code>products.json</code> and recommend
+                        <span>Spin the wheel. We’ll pick a category and recommend
                             something.</span>
                     </div>
 
