--- a/frontend/products/games/puzzle-squares/index.html
+++ b/frontend/products/games/puzzle-squares/index.html
@@ -177,7 +177,7 @@
 
             <div class="monoBox" style="display:flex; justify-content:center;">
               <img
-                src="https://assets.unlim8ted.com/images/products/games/puzzle square/image1.png"
+                src="https://assets.unlim8ted.com/images/products/games/puzzle-square/image1.png"
                 alt="Music-note puzzle"
                 style="max-width:100%; height:auto; border-radius:12px; border:1px solid rgba(255,255,255,.12);"
               />
