remove more text from products index

--- a/frontend/products/index.html
+++ b/frontend/products/index.html
@@ -543,16 +543,8 @@
                 <div class="heroCard">
                     <h1>Our Products</h1>
                     <p class="sub">
-                        Discover what Unlim8ted is building—films, music, games, software, physical items, and more.
-                        Want something random? Spin the wheel and we’ll pick a category and a specific item for you.
+                        Discover what Unlim8ted is building: films, music, games, software, physical items, and more.
                     </p>
-                    <div class="pillRow" aria-hidden="true">
-                        <span class="pill"><span class="pillDot"></span> Always evolving</span>
-                        <span class="pill"><span class="pillDot" style="background: var(--accent2)"></span> Works great
-                            on mobile</span>
-                        <span class="pill"><span class="pillDot" style="background: var(--good)"></span> Powered by
-                            products.json</span>
-                    </div>
 
                     <div class="sectionTitle">Browse by category</div>
 
