Add link to Explore Upcoming Try-On Service

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1381,6 +1381,7 @@
             </p>
             <div class="hero-cta">
               <a class="btn primary" href="/sign-in">Get Started</a>
+                <a class="btn primary" href="/try-on">Explore Upcoming Try-On Service</a>
               <a class="btn" href="/products/">See products</a>
             </div>
           </div>
