--- a/frontend/wise-size.html
+++ b/frontend/wise-size.html
@@ -892,7 +892,73 @@
       background: rgba(255,255,255,.08);
       border:1px solid rgba(255,255,255,.12);
       box-shadow: inset 0 0 0 1px rgba(0,0,0,.25);
-    }
+    }/* --- Hang-tag "COMING SOON" (above/right of WearWise) --- */
+.hero-title{ position:relative; display:inline-block; }
+
+.comingTag{
+  position:absolute;
+  top: clamp(-46px, -3.6vw, -18px);
+  right: clamp(-22px, -2.2vw, -8px);
+  transform: rotate(12deg);
+  transform-origin: 85% 50%;
+  z-index: 12;
+  pointer-events:none;
+  filter: drop-shadow(0 18px 70px rgba(0,0,0,.55));
+}
+
+.comingTag svg{
+  width: clamp(140px, 16vw, 220px);
+  height: auto;
+  display:block;
+}
+
+/* glassy tag */
+.comingTag .tagFill{
+  fill: rgba(0,0,0,.22);
+  stroke: rgba(255,255,255,.18);
+  stroke-width: 2;
+}
+
+/* neon outline glow */
+.comingTag .tagGlow{
+  fill:none;
+  stroke: url(#tagGrad);
+  stroke-width: 8;
+  opacity:.55;
+  filter: blur(3px);
+}
+
+.comingTag .holeOuter{
+  fill: rgba(0,0,0,.62);
+  stroke: rgba(255,255,255,.22);
+  stroke-width: 2;
+}
+
+.comingTag .holeInner{
+  fill: rgba(245,247,255,.28);
+}
+
+.comingTag .tagText{
+  font-family: Antonio, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+  font-weight: 900;
+  letter-spacing: -.02em;
+  text-transform: uppercase;
+  fill: rgba(245,247,255,.95);
+}
+
+@media (prefers-reduced-motion: no-preference){
+  .comingTag .tagGlow{ animation: tagPulse 3.2s var(--ease) infinite; }
+  @keyframes tagPulse{ 0%{opacity:.30} 50%{opacity:.85} 100%{opacity:.30} }
+}
+
+@media (max-width: 560px){
+  .comingTag{
+    top: -26px;
+    right: -10px;
+    transform: rotate(10deg) scale(.92);
+  }
+}
+
     .garmentShape{
       position:absolute;
       left:50%;
@@ -1434,13 +1500,13 @@
 }
 
   </style>
+  <script type="module" src="/components/site-navbar.js"></script>
+
 </head>
 
 <body>
   <canvas id="dust"></canvas>
 
-  <!-- IMPORTANT: script before navbar (as requested) -->
-  <script type="module" src="/components/site-navbar.js"></script>
 
   <site-navbar
     cart-href="/cart"
@@ -1498,7 +1564,7 @@
   <span class="comingSoonText">Coming soon</span>
 </div>
           <div class="hero-title hero-title-split">
-            <h1 class="neon">WearWise</h1>
+            <h1 class="neon">WiseSize</h1>
           </div>
 
           <div class="hero-text-scroll" id="heroStrip" style="clip-path: polygon(50% 0, 50% 0, 50% 100%, 50% 100%);">
