refactor code structure and do a lot of work on wise size. + fix homepage open

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
-  style="--endExpand: 560.00px; --endLift: 0.00px; --endOn: 1; --pathDraw: 1; --ignite: 1; --pathVis: 1; --hY: -293.44px; --hShift: -1382.03px; --hOn: 0; --heroOn: 0; --vibe: 0; --bgy: 14; --bgx: 0; --sigilScale: 0.78; --p: 1;">
+  style="">
 
 <head>
   <meta charset="UTF-8" />
@@ -1220,7 +1220,7 @@
             <div class="hero-cta">
               <a class="btn primary" href="/sign-in">Get Started</a>
               <a class="btn" href="/products/">See products</a>
-              <a class="btn primary" href="/wise-size">Explore Upcoming Try-On Service</a>
+              <a class="btn primary" href="/software/wise-size">Explore Upcoming Try-On Service</a>
             </div>
           </div>
         </section>
