Update link for Upcoming Try-On Service

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1220,7 +1220,7 @@
             <div class="hero-cta">
               <a class="btn primary" href="/sign-in">Get Started</a>
               <a class="btn" href="/products/">See products</a>
-              <a class="btn primary" href="/software/wise-size">Explore Upcoming Try-On Service</a>
+              <a class="btn primary" href="/products/software/wise-size">Explore Upcoming Try-On Service</a>
             </div>
           </div>
         </section>
